--- a/quecomemos/Base.lproj/Main.storyboard
+++ b/quecomemos/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="4kJ-Uc-fTD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="4kJ-Uc-fTD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -24,7 +24,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ael-PN-Dh7" id="mOM-N9-r38">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="89"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultMeal" translatesAutoresizingMaskIntoConstraints="NO" id="8Kn-LE-fBr">
@@ -53,7 +53,7 @@
                                 <connections>
                                     <outlet property="mealImage" destination="8Kn-LE-fBr" id="3ue-Sr-lR7"/>
                                     <outlet property="mealName" destination="cp9-VT-Gha" id="h3A-56-xyA"/>
-                                    <segue destination="BYZ-38-t0r" kind="showDetail" identifier="Show Detail" action="showViewController:sender:" id="5ew-9Q-PfT"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="Show Detail" id="5ew-9Q-PfT"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -64,7 +64,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Meal list" id="j69-kw-Uvk"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="showDetail" identifier="Add Meal" action="showViewController:sender:" id="Gsa-84-iqz"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="Add Meal" id="Gsa-84-iqz"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MCc-iK-xIc" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -84,7 +84,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hnJ-X1-fDq">
-                                <rect key="frame" x="163" y="574" width="49" height="30"/>
+                                <rect key="frame" x="163" y="530" width="49" height="30"/>
                                 <color key="backgroundColor" red="0.99430428485791211" green="1" blue="0.97689228365814229" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.17654205894627303" green="0.41491574434615636" blue="0.45383338730569944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <size key="titleShadowOffset" width="3" height="3"/>
@@ -109,14 +109,14 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="g7D-9J-rGx">
-                                <rect key="frame" x="16" y="89" width="343" height="142"/>
+                                <rect key="frame" x="16" y="133" width="343" height="142"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" placeholderIntrinsicWidth="323" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Add your favorite meal" textAlignment="center" minimumFontSize="22" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="uB1-c5-R9n">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" placeholderIntrinsicWidth="323" placeholderIntrinsicHeight="30" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Add your favorite meal" textAlignment="center" minimumFontSize="22" translatesAutoresizingMaskIntoConstraints="NO" id="uB1-c5-R9n">
                                         <rect key="frame" x="10" y="0.0" width="323" height="30"/>
                                         <gestureRecognizers/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="22"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardAppearance="light" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="light" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
                                     <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="242" verticalCompressionResistancePriority="743" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="jEb-b7-QKl">
                                         <rect key="frame" x="85.5" y="42" width="172" height="100"/>
@@ -148,28 +148,16 @@
                             </stackView>
                             <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j7B-fa-dFY">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <items>
-                                    <navigationItem id="qdB-k7-nNg">
-                                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="zBl-fw-7G9">
-                                            <connections>
-                                                <action selector="cancel:" destination="BYZ-38-t0r" id="h5a-Fa-b67"/>
-                                            </connections>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="bm1-ET-qvt">
-                                            <connections>
-                                                <segue destination="SKV-9m-eps" kind="unwind" unwindAction="unwindToMealListWithSender:" id="UIu-Y8-xBz"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
                             </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="qgi-D2-Ibb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="38s-tY-Vyv"/>
                             <constraint firstItem="qgi-D2-Ibb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Mor-w5-ACY"/>
                             <constraint firstItem="g7D-9J-rGx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="OPr-RM-scM"/>
                             <constraint firstItem="hnJ-X1-fDq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OR5-8f-ZnC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qgi-D2-Ibb" secondAttribute="trailing" constant="30" id="Xqb-JR-VPD"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hnJ-X1-fDq" secondAttribute="bottom" constant="63" id="a2Z-Ng-f79"/>
                             <constraint firstItem="g7D-9J-rGx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bfx-5Q-yIi"/>
                             <constraint firstItem="g7D-9J-rGx" firstAttribute="top" secondItem="j7B-fa-dFY" secondAttribute="bottom" constant="25" id="fn4-3f-xZq"/>
@@ -177,15 +165,15 @@
                             <constraint firstItem="j7B-fa-dFY" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="sf9-0L-Ytm"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="cleanButton" destination="hnJ-X1-fDq" id="N0u-XT-hX7"/>
                         <outlet property="newFoodText" destination="uB1-c5-R9n" id="rkg-R0-g3m"/>
                         <outlet property="photoImageView" destination="qgi-D2-Ibb" id="iJc-bv-StF"/>
-                        <outlet property="saveButton" destination="bm1-ET-qvt" id="o0F-oS-Xwm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <exit id="SKV-9m-eps" userLabel="Exit" sceneMemberID="exit"/>
                 <tapGestureRecognizer id="qUc-aN-SmS">
                     <connections>
                         <action selector="photoImageTap:" destination="BYZ-38-t0r" id="ZhY-2B-EJ7"/>
@@ -246,7 +234,7 @@
                                 </connections>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.9943042849" green="1" blue="0.97689228370000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="a1e-25-6PW">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="organize" id="ehQ-iU-JO1">
