--- a/eater/Base.lproj/Main.storyboard
+++ b/eater/Base.lproj/Main.storyboard
@@ -326,7 +326,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bdp-m6-Acn">
-                                <rect key="frame" x="0.0" y="108" width="375" height="468"/>
+                                <rect key="frame" x="0.0" y="104" width="375" height="472"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -385,14 +385,14 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WX2-KE-elX">
-                                <rect key="frame" x="301" y="38" width="36" height="36"/>
+                                <rect key="frame" x="313" y="30" width="36" height="36"/>
                                 <state key="normal" image="icon_plus"/>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" id="f6b-6i-N2c"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_nav_title" translatesAutoresizingMaskIntoConstraints="NO" id="q5f-lu-1cg">
-                                <rect key="frame" x="141" y="34" width="93" height="40"/>
+                                <rect key="frame" x="141" y="30" width="93" height="36"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.20392156862745098" green="0.14901960784313725" blue="0.12941176470588234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -400,20 +400,20 @@
                             <constraint firstItem="q5f-lu-1cg" firstAttribute="centerX" secondItem="V9b-oW-ge0" secondAttribute="centerX" id="1IM-Fr-c22"/>
                             <constraint firstAttribute="trailing" secondItem="V9b-oW-ge0" secondAttribute="trailing" id="463-Og-er2"/>
                             <constraint firstItem="wzq-WB-P5K" firstAttribute="top" secondItem="bdp-m6-Acn" secondAttribute="bottom" constant="38.5" id="4Ul-3j-h2f"/>
-                            <constraint firstItem="WX2-KE-elX" firstAttribute="top" secondItem="tIT-5O-GEV" secondAttribute="bottom" constant="18" id="5k9-5I-FB2"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="WX2-KE-elX" secondAttribute="trailing" constant="22" id="I4N-IM-Gto"/>
+                            <constraint firstItem="WX2-KE-elX" firstAttribute="top" secondItem="tIT-5O-GEV" secondAttribute="bottom" constant="10" id="5k9-5I-FB2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WX2-KE-elX" secondAttribute="trailing" constant="10" id="I4N-IM-Gto"/>
                             <constraint firstItem="V9b-oW-ge0" firstAttribute="leading" secondItem="Ssd-fg-EdA" secondAttribute="leading" id="ITz-is-sAj"/>
                             <constraint firstItem="wzq-WB-P5K" firstAttribute="bottom" secondItem="Ssd-fg-EdA" secondAttribute="bottom" multiplier="0.98" constant="1" id="Kpk-Fk-9Of"/>
                             <constraint firstItem="Fr3-bv-8vL" firstAttribute="top" secondItem="V9b-oW-ge0" secondAttribute="bottom" id="Too-Ii-oTf"/>
                             <constraint firstAttribute="trailing" secondItem="bdp-m6-Acn" secondAttribute="trailing" id="WlE-Xp-CKE"/>
                             <constraint firstItem="wzq-WB-P5K" firstAttribute="centerX" secondItem="V9b-oW-ge0" secondAttribute="centerX" id="Y6d-vu-4nx"/>
                             <constraint firstItem="V9b-oW-ge0" firstAttribute="top" secondItem="Ssd-fg-EdA" secondAttribute="top" id="eLw-mK-6Nf"/>
-                            <constraint firstItem="tIT-5O-GEV" firstAttribute="bottom" secondItem="q5f-lu-1cg" secondAttribute="top" constant="-14" id="fNn-Ft-9O3"/>
+                            <constraint firstItem="tIT-5O-GEV" firstAttribute="bottom" secondItem="q5f-lu-1cg" secondAttribute="top" constant="-10" id="fNn-Ft-9O3"/>
                             <constraint firstItem="bdp-m6-Acn" firstAttribute="leading" secondItem="Ssd-fg-EdA" secondAttribute="leading" id="fSz-TZ-xvx"/>
-                            <constraint firstItem="WX2-KE-elX" firstAttribute="height" secondItem="q5f-lu-1cg" secondAttribute="height" constant="-4" id="o2g-ot-Jey"/>
+                            <constraint firstItem="WX2-KE-elX" firstAttribute="height" secondItem="q5f-lu-1cg" secondAttribute="height" id="o2g-ot-Jey"/>
                             <constraint firstItem="wzq-WB-P5K" firstAttribute="width" secondItem="V9b-oW-ge0" secondAttribute="width" multiplier="0.6" id="rjN-E2-sXn"/>
                             <constraint firstItem="v48-SW-FUU" firstAttribute="centerX" secondItem="V9b-oW-ge0" secondAttribute="centerX" id="t5D-ZB-Yxm"/>
-                            <constraint firstItem="bdp-m6-Acn" firstAttribute="top" secondItem="q5f-lu-1cg" secondAttribute="bottom" constant="34" id="tCe-dn-DEg"/>
+                            <constraint firstItem="bdp-m6-Acn" firstAttribute="top" secondItem="q5f-lu-1cg" secondAttribute="bottom" constant="38" id="tCe-dn-DEg"/>
                             <constraint firstItem="wzq-WB-P5K" firstAttribute="top" secondItem="v48-SW-FUU" secondAttribute="bottom" constant="11.5" id="vr3-sT-LiG"/>
                         </constraints>
                     </view>
